--- a/ui/preferences.ui
+++ b/ui/preferences.ui
@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.16.0 on Fri Jan 17 17:40:39 2014 -->
+<!-- Generated with glade 3.16.1 -->
 <interface>
-  <!-- interface-requires gtk+ 3.0 -->
+  <requires lib="gtk+" version="3.0"/>
   <object class="GtkAdjustment" id="adjustment1">
     <property name="lower">1</property>
     <property name="upper">60</property>
     <property name="step_increment">1</property>
-    <property name="page_increment">5</property>
-  </object>
-  <object class="GtkAdjustment" id="adjustment2">
-    <property name="upper">300</property>
-    <property name="step_increment">5</property>
     <property name="page_increment">5</property>
   </object>
   <object class="GtkWindow" id="vmm-preferences">
@@ -542,7 +537,7 @@ identical CPUs in order to migrate the VM.</property>
                           </object>
                           <packing>
                             <property name="left_attach">0</property>
-                            <property name="top_attach">1</property>
+                            <property name="top_attach">2</property>
                             <property name="width">1</property>
                             <property name="height">1</property>
                           </packing>
@@ -572,7 +567,7 @@ identical CPUs in order to migrate the VM.</property>
                           </object>
                           <packing>
                             <property name="left_attach">1</property>
-                            <property name="top_attach">2</property>
+                            <property name="top_attach">3</property>
                             <property name="width">1</property>
                             <property name="height">1</property>
                           </packing>
@@ -589,7 +584,7 @@ identical CPUs in order to migrate the VM.</property>
                           </object>
                           <packing>
                             <property name="left_attach">0</property>
-                            <property name="top_attach">2</property>
+                            <property name="top_attach">3</property>
                             <property name="width">1</property>
                             <property name="height">1</property>
                           </packing>
@@ -603,6 +598,37 @@ identical CPUs in order to migrate the VM.</property>
                             <property name="halign">start</property>
                             <property name="hexpand">False</property>
                             <signal name="clicked" handler="on_prefs_btn_keys_define_clicked" swapped="no"/>
+                          </object>
+                          <packing>
+                            <property name="left_attach">1</property>
+                            <property name="top_attach">2</property>
+                            <property name="width">1</property>
+                            <property name="height">1</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkLabel" id="label26">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="tooltip_text" translatable="yes">Change guest resolution when the guest window size is changed. Only works with properly configured guest using spice and the desktop agent.</property>
+                            <property name="xalign">0</property>
+                            <property name="label" translatable="yes">_Resize guest with window:</property>
+                            <property name="use_underline">True</property>
+                            <property name="mnemonic_widget">prefs-console-resizeguest</property>
+                            <property name="lines">2</property>
+                          </object>
+                          <packing>
+                            <property name="left_attach">0</property>
+                            <property name="top_attach">1</property>
+                            <property name="width">1</property>
+                            <property name="height">1</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkComboBox" id="prefs-console-resizeguest">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <signal name="changed" handler="on_prefs_console_resizeguest_changed" swapped="no"/>
                           </object>
                           <packing>
                             <property name="left_attach">1</property>
@@ -945,5 +971,10 @@ identical CPUs in order to migrate the VM.</property>
         </child>
       </object>
     </child>
+  </object>
+  <object class="GtkAdjustment" id="adjustment2">
+    <property name="upper">300</property>
+    <property name="step_increment">5</property>
+    <property name="page_increment">5</property>
   </object>
 </interface>
