manager: Add File->New Virtual Machine (bz 871682)

--- a/ui/manager.ui
+++ b/ui/manager.ui
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.16.1 -->
 <interface>
-  <!-- interface-requires gtk+ 3.0 -->
+  <requires lib="gtk+" version="3.0"/>
   <object class="GtkAccelGroup" id="accelgroup1"/>
   <object class="GtkImage" id="image2">
     <property name="visible">True</property>
@@ -54,6 +55,15 @@
                         <property name="image">image2</property>
                         <property name="use_stock">False</property>
                         <signal name="activate" handler="on_menu_file_add_connection_activate" swapped="no"/>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkMenuItem" id="menu-new-vm">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">_New Virtual Machine</property>
+                        <property name="use_underline">True</property>
+                        <signal name="activate" handler="on_menu_new_vm_activate" swapped="no"/>
                       </object>
                     </child>
                     <child>
@@ -353,6 +363,7 @@
                   </object>
                   <packing>
                     <property name="expand">False</property>
+                    <property name="homogeneous">False</property>
                   </packing>
                 </child>
               </object>
